syntax = "proto3";

package go_demo.xjwt;

option go_package = "demo/xjwt;xjwt";
option java_multiple_files = true;
option java_package = "xjwt";

service Xjwt {
    rpc CreateXjwt (CreateXjwtRequest) returns (CreateXjwtReply);
    rpc UpdateXjwt (UpdateXjwtRequest) returns (UpdateXjwtReply);
    rpc DeleteXjwt (DeleteXjwtRequest) returns (DeleteXjwtReply);
    rpc GetXjwt (GetXjwtRequest) returns (GetXjwtReply);
    rpc ListXjwt (ListXjwtRequest) returns (ListXjwtReply);
}

message CreateXjwtRequest {}
message CreateXjwtReply {}

message UpdateXjwtRequest {}
message UpdateXjwtReply {}

message DeleteXjwtRequest {}
message DeleteXjwtReply {}

message GetXjwtRequest {}
message GetXjwtReply {}

message ListXjwtRequest {}
message ListXjwtReply {}